# aeon_feeder

./: LICENSE  LICENSE.md  README.md
Code/: .gitignore  CMakeLists.txt
Code/freeRTOS/: freeRTOS.cmake
Code/libraries/pid/: pid.cmake
Code/libraries/pio_quad_encoder/: CMakeLists.txt  pio_quad_encoder.cpp  pio_quad_encoder.h
Code/source/: ForageFeeder.cpp
Firmware/: swc-pico-forage_feeder.uf2
eCAD/AEON.Feeder.ApplicationBoard/: .gitignore  AEON.Feeder.ApplicationBoard.PcbDoc  AEON.Feeder.ApplicationBoard.PrjPcb  AEON.Feeder.ApplicationBoard.PrjPcbStructure  Assembly.OutJob  Assembly.PCBDwf  Documentation.OutJob  Fabrication.OutJob  Fabrication.PCBDwf  MotorDriver.Mikroe.SchDoc  PicoInterface.SchDoc  PowerSupply.SchDoc
eCAD/AEON.Feeder.BeamBreak/: AEON.Feeder.BeamBreak.PcbDoc  AEON.Feeder.BeamBreak.PrjPcb  AEON.Feeder.BeamBreak.PrjPcbStructure  AEON.Feeder.BeamBreak.SchDoc  Assembly.OutJob  Assembly.PCBDwf  Documentation.OutJob  Fabrication.OutJob  Fabrication.PCBDwf
freeRTOS/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/breakout_colourlcd240x240/: CMakeLists.txt
libraries/fonts/: CMakeLists.txt  fonts.cmake
libraries/pico_display/: CMakeLists.txt  pico_display.cmake  pico_display.hpp
libraries/pico_graphics/: CMakeLists.txt  pico_graphics.cpp  pico_graphics.hpp
libraries/pid/: CMakeLists.txt  pid.cpp
libraries/pio_quad_encoder/: pio_quad_encoder.cmake
mCAD/: AEON.AcrylicTop.ipt  AEON.AluminiumFrame.ipt  AEON.Feeder.Base.ipt  AEON.Feeder.BeamBreakBlock.ipt  AEON.Feeder.BearingSpacer.ipt  AEON.Feeder.ClampBlock.ipt  AEON.Feeder.ClampUpper.ipt  AEON.Feeder.Disc.ipt  AEON.Feeder.EncodeMount.ipt  AEON.Feeder.Guide.ipt  AEON.Feeder.MagnetHolder.ipt  AEON.Feeder.Opening.ipt  AEON.Feeder.SiliconeTube.ipt  AEON.Feeder.Track.ipt  AEON.Feeder._Main.iam  AEON.Feeder.ipj
mCAD/AEON.Feeder.BeamBreak/: ND.ForageFeeder.BeamBreak.iam  ND.ForageFeeder.BeamBreak_BOARD.ipt
mCAD/AEON.FeederElectronics/: ND.ForagingFeeder.ApplicationBoard.Enclosure.Bottom.ipt  ND.ForagingFeeder.ApplicationBoard.Enclosure.Top.ipt  ND.ForagingFeeder.Electronics.iam  ND_ForagingFeeder_ApplicationBoard_00.iam  ND_ForagingFeeder_ApplicationBoard_00_BOARD.ipt  ND_ForagingFeeder_ApplicationBoard_00_with_Pico.iam
source/: CMakeLists.txt  CMakeLists.txt.bak  ForageFeeder.cpp  base.cpp
(+153 files in other folders)
